Fix code snippet right-hand-side background color issue on mobile

--- a/_stylesheets/lite.css
+++ b/_stylesheets/lite.css
@@ -138,6 +138,7 @@ pre > code {
   white-space: pre;
   overflow: scroll;
   max-width: 80vw;
+  width: 100%;
   display: block;
   background-color: var(--code-bg);
   color: var(--code-textcolor);
